--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.1
   html: ^0.14.0+3
   path_provider: ^1.6.8
   dio: ^3.0.9
   dio_cookie_manager: ^1.0.0
   cookie_jar: ^1.0.0
-  liquid_pull_to_refresh: ^2.0.0
   shared_preferences: ^0.5.7+2
+  url_launcher: ^5.4.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
